# ai-passport

./: .gitignore  CHANGELOG.md  README.md
mcp-server/: pyproject.toml  server.py
skills/: snaplii-cli.md
snaplii-cli/: pyproject.toml
snaplii-cli/src/snaplii/: __main__.py  cli.py  client.py  config_store.py  exceptions.py  output.py
snaplii-cli/src/snaplii/commands/: apikey.py  browse.py  card_brands.py  config.py  giftcard.py  init.py  purchase.py  smart.py
