[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snaplii-mcp"
version = "0.1.0"
description = "MCP server for the Snaplii Agent Gateway"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27,<1",
]

[project.scripts]
snaplii-mcp = "server:main_sync"

[tool.hatch.build.targets.wheel]
packages = ["."]
