[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "snaplii-cli"
version = "0.1.0"
description = "CLI client for the Snaplii Agent Gateway API"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-httpx>=0.35,<1",
]

[project.scripts]
snaplii = "snaplii.cli:_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/snaplii"]

[tool.pytest.ini_options]
testpaths = ["tests"]
